Minor version bumps (#330)